--- a/index.html
+++ b/index.html
@@ -26,6 +26,34 @@
       <div
         class="grid overflow-hidden grid-cols-5 grid-rows-1 grid-flow-row h-auto m-5"
       >
+      <div class="box">
+        <a href="https://leop.me" target="_blank"
+          ><img
+            alt=""
+            width="30px"
+            class="hover:rounded-lg hover:bg-[#e6e6e6] p-1 m-0"
+            src="./public/img/home-house.svg"
+        /></a>
+      </div>
+
+        <div class="box">
+          <a href="https://www.linkedin.com/in/l%C3%A9o-martin-2886a8233/" target="_blank"
+            ><img
+              alt=""
+              width="30px"
+              class="hover:rounded-lg hover:bg-[#e6e6e6] p-1 m-0"
+              src="./public/img/linkedin-social.svg"
+          /></a>
+        </div>
+        <div class="box">
+          <a href="https://github.com/LeopMartin" target="_blank"
+            ><img
+              alt=""
+              width="30px"
+              class="hover:rounded-lg hover:bg-[#e6e6e6] p-1 m-0"
+              src="./public/img/branch-git-fork.svg"
+          /></a>
+        </div>
         <div class="box">
           <a
             href="https://www.instagram.com/leop_martin/?hl=fr"
@@ -52,35 +80,8 @@
           ></a>
         </div>
         <div class="box">
-          <a href="#" target="_blank"
-            ><img
-              alt=""
-              width="30px"
-              class="hover:rounded-lg hover:bg-[#e6e6e6] p-1 m-0"
-              src="./public/img/home-house.svg"
-          /></a>
-        </div>
-        <div class="box">
-          <a href="#" target="_blank"
-            ><img
-              alt=""
-              width="30px"
-              class="hover:rounded-lg hover:bg-[#e6e6e6] p-1 m-0"
-              src="./public/img/twitter-social-tweet.svg"
-          /></a>
-        </div>
-        <div class="box">
-          <a href="https://github.com/LeopMartin" target="_blank"
-            ><img
-              alt=""
-              width="30px"
-              class="hover:rounded-lg hover:bg-[#e6e6e6] p-1 m-0"
-              src="./public/img/branch-git-fork.svg"
-          /></a>
-        </div>
-        <div class="box">
-          <a href="#" target="_blank"
-            ><img
+          <a href="mailto:leop@leop.me?subject=Email du site de Léop">
+            <img
               alt=""
               width="30px"
               class="hover:rounded-lg hover:bg-[#e6e6e6] p-1 m-0"
@@ -366,7 +367,7 @@
           Contactez moi 😺
         </h2>
         <div class="w-20 h-0 mx-32 flex border border-[#B67332]"></div>
-        <p class="text-black mx-32 mt-5 mb-7 text-left">
+        <p class="text-black mx-32 mt-5 text-left">
           Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex
           aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos
           quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia
@@ -379,10 +380,10 @@
         <div
           class="grid overflow-hidden grid-cols-2 auto-rows-auto gap-1 gap-x-0 grid-flow-row w-auto h-auto"
         >
-          <div class="box bg-[#B67332] rounded">
-            <img class="mt-[25%] mx-auto w-32" src="./public/img/coffee-tea.svg" alt="some" />
+          <div class="box">
+            <img width="90%" class="inline-block ml-16" src="./public/img/mail.png" alt="mail" />
           </div>
-          <div class="box inline-block">
+          <div class="box inline-block my-auto">
             <h3 class="text-2xl font-semibold text-[#93441A]">
               Envoyer moi un Email
             </h3>
