--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
               ></textarea>
             </form>
             <button
-              class="my-3 border border-[#B67332] rounded px-4 py-2 hover:bg-[#B67332] hover:text-white active:bg-[#93441A] active:text-white cursor-not-allowed"
+              class="my-3 border border-[#B67332] rounded px-4 py-2 hover:bg-[#B67332] hover:text-white active:bg-[#93441A] active:text-white"
               type="button"
               on:click="sendData()"
               id="btn-form"
