--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>🌸 Léo_p 🌸</title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
   <link rel="stylesheet" href="./public/style.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
