--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html lang="fr">
 <head>
-  <title>🌸 Léo_p 🌸</title>
+  <title>🌸 Léo_p </title>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1"/>
-  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> 
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <link rel="stylesheet" href="./public/style.css" />
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
