fix: center arrow and new fonts

--- a/index.html
+++ b/index.html
@@ -169,7 +169,9 @@
             I'm Léo_p ! <br />
             Pretty cool developer UwU
           </p>
-          <div class="arrow text-center"></div>
+          <a class="inline-flex ml-[50%] mr-[50%] mt-[50%]"" href="#about">
+            <span class="arrow text-center"></span>
+          </a>
         </div>
         <!-- <div class="w-2/3 mt-[5%] inline-block text-center">
           <p class="text-left text-5xl cadre-home">
