--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <title>🌸 Léo_p 🌸</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="shortcut icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🍺</text></svg>"
+      type="image/x-icon"
+    />
     <link rel="stylesheet" href="./public/style.css" />
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
@@ -20,9 +25,9 @@
     <!-- vetical nav bar -->
     <div class="box col-start-1 col-end-3 text-white bg-[#93441A]">
       <div
-        class="w-28 h-28 bg-[#B67332] rounded-full my-12 mx-auto border-8 border-[#DAAB3A]"
+        class="w-32 h-32 bg-[#B67332] rounded-full my-12 mx-auto border-8 border-[#DAAB3A]"
       ></div>
-      <p class="text-center text-2xl font-bold my-5">🏵️ Léo_p 🏵️</p>
+      <p class="text-center text-2xl font-bold my-5 tracking-widest">Léo_p</p>
 
       <div class="flex justify-center">
         <div class="item w-auto h-auto ml-auto mr-auto">
@@ -131,7 +136,10 @@
       <div class="mt-16">
         <div class="flex-inline">
           <div class="item w-full h-auto">
-            <a class="my-2.5 inline-flex font-medium text-lg hover:text-[#DAAB3A]" href="#home">
+            <a
+              class="my-2.5 inline-flex font-medium text-lg hover:text-[#DAAB3A]"
+              href="#home"
+            >
               <svg
                 class="hover:stroke-[#DAAB3A] mx-6"
                 width="25"
@@ -148,7 +156,7 @@
                   d="M3 10.25V20a1 1 0 0 0 1 1h4.429a1 1 0 0 0 1-1v-6.714h5.142V20a1 1 0 0 0 1 1H20a1 1 0 0 0 1-1v-9.75a1 1 0 0 0-.4-.8L12 3 3.4 9.45a1 1 0 0 0-.4.8Z"
                 ></path>
               </svg>
-              Home</a
+              Accueil</a
             >
           </div>
           <div class="item w-full h-auto">
@@ -171,7 +179,7 @@
                 <path d="M12 3a4 4 0 1 0 0 8 4 4 0 1 0 0-8z"></path>
                 <path d="M4 21v-4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v4"></path>
               </svg>
-              About</a
+              Présentation</a
             >
           </div>
           <div class="item w-full h-auto">
@@ -191,7 +199,7 @@
                   d="M20 22H4a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1Zm-1-2V4H5v16h14ZM7 6h4v4H7V6Zm0 6h10v2H7v-2Zm0 4h10v2H7v-2Zm6-9h4v2h-4V7Z"
                 ></path>
               </svg>
-              Skills
+              Compétences
             </a>
           </div>
           <div class="item w-full h-auto">
@@ -231,12 +239,14 @@
       >
         <!-- Home -->
         <div class="ml-auto mr-auto mt-24">
-          <p class="text-left text-5xl cadre-home">
-            Hi,<br />
-            I'm Léo_p ! <br />
-            Pretty cool developer UwU
-          </p>
-          <!-- <a class="inline-flex ml-[50%] mr-[50%] mt-[50%]"" href="#about">
+          <div class="cadre-home">
+            <p class="text-left text-5xl py-1">Salut,</p>
+            <p class="text-left text-5xl py-1">Jm'appele Léo_p !</p>
+            <p class="text-left text-5xl py-1">
+              Web développeur 🛠️ & étudiant 🍺
+            </p>
+          </div>
+          <!-- <a class="inline-flex ml-[50%] mr-[50%] mt-[40%]"" href="#about">
             <div class="arrow text-center"></div>
           </a> -->
         </div>
@@ -246,7 +256,7 @@
         <h2
           class="mx-32 mb-5 mt-10 text-left text-4xl font-bold text-[#93441A]"
         >
-          Presentation
+          Présentation
         </h2>
         <div class="w-20 h-0 mx-32 flex border border-[#B67332]"></div>
         <p class="text-black mx-32 mt-5 mb-7 text-left">
@@ -268,7 +278,7 @@
           <div class="box col-start-5 col-span-11 ml-5 mr-32">
             <h3 class="text-left text-3xl font-semibold text-[#93441A]">
               Étudiant en programation & Web développeur.
-            </h3> 
+            </h3>
             <p class="text-black text-left italic mt-3">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor consectetur adipiscing elit, sed do eiusmod tempor
@@ -366,10 +376,11 @@
         </h2>
         <div class="w-20 h-0 mx-32 flex border border-[#B67332]"></div>
         <p class="text-black mx-32 mt-5 mb-7 text-left">
-          Je suis passionné par les technlogie web qui son de plus en plus presenete
-          dans nos vie, j'aime aidez a developer des petite activité en leur donant un maximum de
-          visibilité grace au site ou 'WebApp' que je progreame, je m'effeorce de vendre plus
-          qu'un site web, mais un suivis personalisé et quelque chse qui vous corespond.
+          Je suis passionné par les technlogie web qui son de plus en plus
+          presenete dans nos vie, j'aime aidez a developer des petite activité
+          en leur donant un maximum de visibilité grace au site ou 'WebApp' que
+          je progreame, je m'effeorce de vendre plus qu'un site web, mais un
+          suivis personalisé et quelque chse qui vous corespond.
         </p>
         <div
           class="grid overflow-hidden grid-cols-2 auto-rows-auto gap-1 gap-x-7 grid-flow-row w-auto h-auto"
@@ -452,14 +463,15 @@
           </div>
         </div>
         <p class="text-black mx-32 mt-10 mb-5">
-          Je m'evertue a rester un maximum polyvalent et fort de proposition 
-          pour tirer le meilleur de mes capacité. Je suis alése avec les technologie
-          web en générales, mes compétences sont beacoup orienter developement web front-end,
-          car c'est se que je pratique le plus mais il m'est arriver de faire du backend, en 
-          Node.js avec de nobreuse outil et gestion de base de donnée 'ProgessSQL' et 'Prisma',
-          Néanmois merci pour votre lecture. Aussi dans le cadre de mes etude j'ai pu appredre 
-          plusieur langague telle que le C ou le C++, j'ai aussi eu la chance de survolé des langage telle que 
-          le python te le Haskell.  
+          Je m'evertue a rester un maximum polyvalent et fort de proposition
+          pour tirer le meilleur de mes capacité. Je suis alése avec les
+          technologie web en générales, mes compétences sont beacoup orienter
+          developement web front-end, car c'est se que je pratique le plus mais
+          il m'est arriver de faire du backend, en Node.js avec de nobreuse
+          outil et gestion de base de donnée 'ProgessSQL' et 'Prisma', Néanmois
+          merci pour votre lecture. Aussi dans le cadre de mes etude j'ai pu
+          appredre plusieur langague telle que le C ou le C++, j'ai aussi eu la
+          chance de survolé des langage telle que le python te le Haskell.
         </p>
         <br />
         <br />
@@ -474,9 +486,9 @@
         </h2>
         <div class="w-20 h-0 mx-32 flex border border-[#B67332]"></div>
         <p class="text-black mx-32 mt-5 text-left">
-          Si vous avez des question ou des recommencdantion je suis tout ouil, vous pouvez me contacter via le 
-          formulaire si dessous ou encore sur l'un de mes réseau ouvert telle que linkdin ou GitHub
-          a bientot. 😺
+          Si vous avez des question ou des recommencdantion je suis tout ouil,
+          vous pouvez me contacter via le formulaire si dessous ou encore sur
+          l'un de mes réseau ouvert telle que linkdin ou GitHub a bientot. 😺
         </p>
         <br /><br />
         <!-- <div>
