--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="item w-auto h-auto ml-auto mr-auto">
           <a href="https://www.leop.me" target="_blank">
             <svg
-              class="hover:stroke-cyan-500 p-1 m-0"
+              class="hover:stroke-[#DAAB3A] p-1 m-0"
               width="30"
               height="30"
               fill="none"
@@ -55,7 +55,7 @@
             href="https://www.linkedin.com/in/l%C3%A9o-martin-2886a8233/"
             target="_blank"
             ><svg
-              class="hover:stroke-cyan-500 p-1 m-0"
+              class="hover:stroke-[#DAAB3A] p-1 m-0"
               width="30"
               height="30"
               fill="none"
@@ -76,7 +76,7 @@
         <div class="item w-auto h-auto ml-auto mr-auto">
           <a href="https://github.com/LeopMartin" target="_blank"
             ><svg
-              class="hover:stroke-cyan-500 hover:fill-cyan-500 p-1 m-0"
+              class="hover:stroke-[#DAAB3A] hover:fill-[#DAAB3A] p-1 m-0"
               width="30"
               height="30"
               fill="#fff"
@@ -95,7 +95,7 @@
           >
             <svg
               width="30px"
-              class="hover:stroke-cyan-500 p-1 m-0"
+              class="hover:stroke-[#DAAB3A] p-1 m-0"
               fill="none"
               stroke="#fff"
               stroke-linecap="round"
@@ -116,7 +116,7 @@
         <div class="item w-auto h-auto ml-auto mr-auto">
           <a href="mailto:info.freelance@leop.me?subject=Email du site de Léop">
             <svg
-              class="hover:stroke-cyan-500 p-1 m-0"
+              class="hover:stroke-[#DAAB3A] p-1 m-0"
               width="30"
               height="30"
               fill="none"
@@ -372,15 +372,15 @@
           id="#skills"
           class="mx-32 my-5 text-left text-4xl font-bold text-[#93441A]"
         >
-          Skills :
+        Compétences :
         </h2>
         <div class="w-20 h-0 mx-32 flex border border-[#B67332]"></div>
         <p class="text-black mx-32 mt-5 mb-7 text-left">
-          Je suis passionné par les technlogie web qui son de plus en plus
-          presenete dans nos vie, j'aime aidez a developer des petite activité
-          en leur donant un maximum de visibilité grace au site ou 'WebApp' que
-          je progreame, je m'effeorce de vendre plus qu'un site web, mais un
-          suivis personalisé et quelque chse qui vous corespond.
+          Je suis passionné par les technologies Web qui sont de plus en plus
+          présents dans nos vies, j'aime aider à développer des petites
+          activités en leur donnant un maximum de visibilité grace au site ou
+          'WebApp' que je programme, je m'efforce de vendre plus qu'un site
+          Web, mais plus un suivi personnalisé est quelque chose qui vous correspond.
         </p>
         <div
           class="grid overflow-hidden grid-cols-2 auto-rows-auto gap-1 gap-x-7 grid-flow-row w-auto h-auto"
@@ -463,15 +463,15 @@
           </div>
         </div>
         <p class="text-black mx-32 mt-10 mb-5">
-          Je m'evertue a rester un maximum polyvalent et fort de proposition
-          pour tirer le meilleur de mes capacité. Je suis alése avec les
-          technologie web en générales, mes compétences sont beacoup orienter
-          developement web front-end, car c'est se que je pratique le plus mais
-          il m'est arriver de faire du backend, en Node.js avec de nobreuse
-          outil et gestion de base de donnée 'ProgessSQL' et 'Prisma', Néanmois
-          merci pour votre lecture. Aussi dans le cadre de mes etude j'ai pu
-          appredre plusieur langague telle que le C ou le C++, j'ai aussi eu la
-          chance de survolé des langage telle que le python te le Haskell.
+          Je m'évertue à rester un maximum polyvalent et fort de proposition
+          pour tirer le meilleur de mes capacités. Je suis à l'aise avec les
+          technologie Web en générales, mes compétences sont beaucoup orientées
+          Développement web front-end, car c'est-ce que je pratique le plus mais
+          il m'est arrivé de faire du backend, En Node.js avec de nombreuse
+          outil, et avec gestion de base de données 'ProgessSQL' et 'Prisma', Néanmoins
+          merci pour votre lecture. Aussi dans le cadre de mes études j'ai pu
+          Apprendre plusieurs langages tels que le C ou le C++, j'ai aussi eu la
+          chance de survoler des langages tel que le python te l'Haskell.
         </p>
         <br />
         <br />
@@ -556,7 +556,113 @@
       <br /><br />
       <!-- Contact -->
       <footer class="p-4 bg-[#B67332] shadow md:px-6 md:py-8">
-        <div class="sm:flex sm:items-center sm:justify-between"></div>
+        <div class="flex justify-center">
+          <div class="sm:flex sm:items-center sm:justify-between w-8/12">
+            <div class="item w-auto h-auto ml-auto mr-auto">
+              <a href="https://www.leop.me" target="_blank">
+                <svg
+                  class="hover:stroke-[#93441A] p-1 m-0"
+                  width="30"
+                  height="30"
+                  fill="none"
+                  stroke="#fff"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M3 10.25V20a1 1 0 0 0 1 1h4.429a1 1 0 0 0 1-1v-6.714h5.142V20a1 1 0 0 0 1 1H20a1 1 0 0 0 1-1v-9.75a1 1 0 0 0-.4-.8L12 3 3.4 9.45a1 1 0 0 0-.4.8Z"
+                  ></path>
+                </svg>
+              </a>
+            </div>
+            <div class="item w-auto h-auto ml-auto mr-auto">
+              <a
+                href="https://www.linkedin.com/in/l%C3%A9o-martin-2886a8233/"
+                target="_blank"
+                ><svg
+                  class="hover:stroke-[#93441A] p-1 m-0"
+                  width="30"
+                  height="30"
+                  fill="none"
+                  stroke="#fff"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path d="M4 2a2 2 0 1 0 0 4 2 2 0 1 0 0-4z"></path>
+                  <path d="M2 9h4v13H2z"></path>
+                  <path
+                    d="M10 22h4v-7a2 2 0 1 1 4 0v7h4v-7a6 6 0 0 0-12 0v7Z"
+                  ></path></svg
+              ></a>
+            </div>
+            <div class="item w-auto h-auto ml-auto mr-auto">
+              <a href="https://github.com/LeopMartin" target="_blank"
+                ><svg
+                  class="hover:stroke-[#93441A] hover:fill-[#93441A] p-1 m-0"
+                  width="30"
+                  height="30"
+                  fill="#fff"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M12 2C6.475 2 2 6.475 2 12a9.994 9.994 0 0 0 6.838 9.488c.5.087.687-.213.687-.476 0-.237-.013-1.024-.013-1.862-2.512.463-3.162-.612-3.362-1.175-.113-.288-.6-1.175-1.025-1.413-.35-.187-.85-.65-.013-.662.788-.013 1.35.725 1.538 1.025.9 1.512 2.338 1.087 2.912.825.088-.65.35-1.087.638-1.337-2.225-.25-4.55-1.113-4.55-4.938 0-1.088.387-1.987 1.025-2.688-.1-.25-.45-1.275.1-2.65 0 0 .837-.262 2.75 1.026a9.28 9.28 0 0 1 2.5-.338c.85 0 1.7.112 2.5.337 1.912-1.3 2.75-1.024 2.75-1.024.55 1.375.2 2.4.1 2.65.637.7 1.025 1.587 1.025 2.687 0 3.838-2.337 4.688-4.562 4.938.362.312.675.912.675 1.85 0 1.337-.013 2.412-.013 2.75 0 .262.188.574.688.474A10.016 10.016 0 0 0 22 12c0-5.525-4.475-10-10-10Z"
+                  ></path></svg
+              ></a>
+            </div>
+            <div class="item w-auto h-auto ml-auto mr-auto">
+              <a
+                href="https://www.instagram.com/leop_martin/?hl=fr"
+                target="_blank"
+              >
+                <svg
+                  width="30px"
+                  class="hover:stroke-[#93441A] p-1 m-0"
+                  fill="none"
+                  stroke="#fff"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    d="M2 6a4 4 0 0 1 4-4h12a4 4 0 0 1 4 4v12a4 4 0 0 1-4 4H6a4 4 0 0 1-4-4V6Z"
+                  ></path>
+                  <path
+                    d="M12 7.556a4.444 4.444 0 1 0 0 8.888 4.444 4.444 0 1 0 0-8.888z"
+                  ></path>
+                  <path d="M18 6.022V6"></path></svg
+              ></a>
+            </div>
+            <div class="item w-auto h-auto ml-auto mr-auto">
+              <a
+                href="mailto:info.freelance@leop.me?subject=Email du site de Léop"
+              >
+                <svg
+                  class="hover:stroke-[#93441A] p-1 m-0"
+                  width="30"
+                  height="30"
+                  fill="none"
+                  stroke="#fff"
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <rect width="18" height="14" x="3" y="5" rx="1"></rect>
+                  <path d="M20 5.5 12 13 4 5.5"></path></svg
+              ></a>
+            </div>
+          </div>
+        </div>
         <hr class="my-6 border-gray-200 sm:mx-auto lg:my-8" />
         <span class="block text-sm text-gray-200 sm:text-center">
           <a href="https://leop.me/" class="hover:underline">Léo_p.me © 2022</a
