--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
+    <script> var script = document.createElement('script'); script.dataset.cache = true; script.dataset.websiteId = '7c7836ea-cee1-45b7-b701-be0213efd5a2'; script.src='https://s.abla.io/abla.js'; document.getElementsByTagName('head')[0].appendChild(script);</script>
     <title>🌸 Léo_p 🌸</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -280,10 +281,10 @@
               Étudiant en programation & Web développeur.
             </h3>
             <p class="text-black text-left italic mt-3">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-              eiusmod tempor consectetur adipiscing elit, sed do eiusmod tempor
-              consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-              labore et dolore magna aliqua.
+              Actuelement etudiant en école d'ingenieur (2ème année a Epitech),
+              j'etudis le language C qui est la base de la programation moderne,
+              la 2éme année dna slecole Epitech et marque par 6 mois de stage en 
+              entreprise et une piscine de C++.
             </p>
             <div
               class="grid overflow-hidden auto-cols-auto auto-rows-min gap-1.5 gap-x-1.5 grid-flow-row h-auto text-black ml-5 mr-32"
@@ -470,8 +471,8 @@
           il m'est arrivé de faire du backend, En Node.js avec de nombreuse
           outil, et avec gestion de base de données 'ProgessSQL' et 'Prisma', Néanmoins
           merci pour votre lecture. Aussi dans le cadre de mes études j'ai pu
-          Apprendre plusieurs langages tels que le C ou le C++, j'ai aussi eu la
-          chance de survoler des langages tel que le python te l'Haskell.
+          Apprendre plusieurs langages tels que le C, j'ai aussi eu la
+          chance de survoler des langages tel que le python et ASM.
         </p>
         <br />
         <br />
