--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
   <div
     class="grid overflow-hidden grid-cols-12 grid-rows-none gap-0 grid-flow-row h-screen scroll-smooth"
   >
-    <!-- vetical nav bar -->
     <div class="box col-start-1 col-end-3 text-white bg-[#93441A]">
       <div
         class="w-32 h-32 bg-[#B67332] rounded-full my-12 mx-auto border-8 border-[#DAAB3A]"
@@ -280,11 +279,32 @@
             <h3 class="text-left text-3xl font-semibold text-[#93441A]">
               Étudiant en programation & Web développeur.
             </h3>
-            <p class="text-black text-left italic mt-3">
+            <p class="text-black text-left italic mt-5 mb-3">
               Actuelement etudiant en école d'ingenieur (2ème année a Epitech),
-              j'etudis le language C qui est la base de la programation moderne,
-              la 2éme année dna slecole Epitech et marque par 6 mois de stage en 
-              entreprise et une piscine de C++.
+              j'ai étudier le language C qui est la base de la programation moderne durant m'a premiere année.
+              je suis en 2éme année et elle est marqué par un stage entreprise et une piscine de C++, j'ai eu la chance de faire
+               mon stage chez 
+              <a class="font-semibold text-[#B67332] hover:underline" href="https://www.chargepoly.com/" target="_blank" rel="noopener noreferrer">
+                Chargepoly
+                <svg
+                class="align-text-bottom inline"
+                width="20"
+                height="20"
+                fill="none"
+                stroke="currentColor"
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                viewBox="0 0 24 24"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
+                ></path>
+                <path d="M15 3h6v6"></path>
+                <path d="M10 14 21 3"></path>
+              </svg>
+              </a>.
             </p>
             <div
               class="grid overflow-hidden auto-cols-auto auto-rows-min gap-1.5 gap-x-1.5 grid-flow-row h-auto text-black ml-5 mr-32"
@@ -353,13 +373,13 @@
               </div>
               <div class="box row-start-4 row-end-4 col-start-1 col-end-3">
                 <p>
-                  Officiis eligendi itaque labore et dolorum mollitia officiis
-                  optio vero. Quisquam sunt adipisci omnis et ut. Nulla
-                  accusantium dolor incidunt officia tempore. Et eius omnis.
-                  Cupiditate ut dicta maxime officiis quidem quia. Sed et
-                  consectetur qui quia repellendus itaque neque. Aliquid amet
-                  quidem ut quaerat cupiditate. Ab et eum qui repellendus omnis
-                  culpa magni laudantium dolores.
+                  Durant mon stage chez Chargepoly, j'ai eu la chance de découvir 
+                  la puissnce des technologie Web, et j'ai pu découvir de nouveaux languages
+                  telle que le Node.js et le Svelte, Et a partir de se moment j'ai continuer
+                  a perfectionné mon utilisation de ses language, pour tenter de devenir un bon developeur
+                  Web afin de faire du freelancing paralelment a mes cours chez Epitech.
+                  Pour moi les technoligie qeb sont une pasion, j'aime découvir de nouvelle technologie 
+                  et le secteur du web peux m'offrir cet satifationde découverte.
                 </p>
               </div>
             </div>
@@ -460,6 +480,32 @@
             </div>
             <div class="w-auto h-2.5 flex bg-[#DAAB3A]">
               <span class="w-[70%] h-2.5 flex bg-[#B67332]"></span>
+            </div>
+          </div>
+          <div class="box my-4 text-black ml-32">
+            <div
+              class="grid overflow-hidden grid-cols-2 auto-rows-auto gap-1 gap-x-1 grid-flow-row w-auto h-auto"
+            >
+              <div class="box text-left font-bold text-sm mb-1">
+                <p>C</p>
+              </div>
+              <div class="box text-end font-bold text-sm mb-1"><p>60%</p></div>
+            </div>
+            <div class="w-auto h-2.5 flex bg-[#DAAB3A]">
+              <span class="w-[60%] h-2.5 flex bg-[#B67332]"></span>
+            </div>
+          </div>
+          <div class="box my-4 text-black mr-32">
+            <div
+              class="grid overflow-hidden grid-cols-2 auto-rows-auto gap-1 gap-x-1 grid-flow-row w-auto h-auto"
+            >
+              <div class="box text-left font-bold text-sm mb-1">
+                <p>Git</p>
+              </div>
+              <div class="box text-end font-bold text-sm mb-1"><p>65%</p></div>
+            </div>
+            <div class="w-auto h-2.5 flex bg-[#DAAB3A]">
+              <span class="w-[65%] h-2.5 flex bg-[#B67332]"></span>
             </div>
           </div>
         </div>
