--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <script> var script = document.createElement('script'); script.dataset.cache = true; script.dataset.websiteId = '7c7836ea-cee1-45b7-b701-be0213efd5a2'; script.src='https://s.abla.io/abla.js'; document.getElementsByTagName('head')[0].appendChild(script);</script>
+    <script>
+      var script = document.createElement("script");
+      script.dataset.cache = true;
+      script.dataset.websiteId = "7c7836ea-cee1-45b7-b701-be0213efd5a2";
+      script.src = "https://s.abla.io/abla.js";
+      document.getElementsByTagName("head")[0].appendChild(script);
+    </script>
     <title>🌸 Léo_p 🌸</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -202,7 +208,10 @@
               Compétences
             </a>
           </div>
-          <div class="item w-full h-auto">
+
+          <div
+            class="camp item w-full h-auto hover:text-[#DAAB3A] hover:stroke-[#DAAB3A]"
+          >
             <a
               class="my-2.5 inline-flex font-medium text-lg hover:text-[#DAAB3A]"
               href="#contact"
@@ -261,9 +270,8 @@
         <div class="w-20 h-0 mx-32 flex border border-[#B67332]"></div>
         <p class="text-black mx-32 mt-5 mb-7 text-left">
           Salut, moi c'est Léop. J'étudie en tant qu'apprenti développeur chez
-          Epitech ! Je suis un passionné d'informatique, j'adore Decouvir de
-          nouvelles technologies et essayé de nouvelles choses 🚀, et j'aime la
-          montagne 🏔️.
+          Epitech ! Je suis un passionné d'informatique, j'adore découvrir de
+          nouvelles technologies et partir à l’aventure a la montagne 🏔️ 🏕️.
         </p>
         <div
           class="grid overflow-hidden grid-cols-12 grid-rows-none gap-0 gap-x-2 grid-flow-row h-auto"
@@ -279,32 +287,8 @@
             <h3 class="text-left text-3xl font-semibold text-[#93441A]">
               Étudiant en programation & Web développeur.
             </h3>
-            <p class="text-black text-left italic mt-5 mb-3">
-              Actuelement etudiant en école d'ingenieur (2ème année a Epitech),
-              j'ai étudier le language C qui est la base de la programation moderne durant m'a premiere année.
-              je suis en 2éme année et elle est marqué par un stage entreprise et une piscine de C++, j'ai eu la chance de faire
-               mon stage chez 
-              <a class="font-semibold text-[#B67332] hover:underline" href="https://www.chargepoly.com/" target="_blank" rel="noopener noreferrer">
-                Chargepoly
-                <svg
-                class="align-text-bottom inline"
-                width="20"
-                height="20"
-                fill="none"
-                stroke="currentColor"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"
-                ></path>
-                <path d="M15 3h6v6"></path>
-                <path d="M10 14 21 3"></path>
-              </svg>
-              </a>.
+            <p class="text-black text-left font-semibold text-xl mt-5 mb-1">
+              Mini-bio :
             </p>
             <div
               class="grid overflow-hidden auto-cols-auto auto-rows-min gap-1.5 gap-x-1.5 grid-flow-row h-auto text-black ml-5 mr-32"
@@ -373,13 +357,10 @@
               </div>
               <div class="box row-start-4 row-end-4 col-start-1 col-end-3">
                 <p>
-                  Durant mon stage chez Chargepoly, j'ai eu la chance de découvir 
-                  la puissnce des technologie Web, et j'ai pu découvir de nouveaux languages
-                  telle que le Node.js et le Svelte, Et a partir de se moment j'ai continuer
-                  a perfectionné mon utilisation de ses language, pour tenter de devenir un bon developeur
-                  Web afin de faire du freelancing paralelment a mes cours chez Epitech.
-                  Pour moi les technoligie qeb sont une pasion, j'aime découvir de nouvelle technologie 
-                  et le secteur du web peux m'offrir cet satifationde découverte.
+                  Actuellement étudiant en école d'ingénieures (2ème année à
+                  Epitech), J’y est étudier les bases du développement (langage C et
+                  ASM). Et pendant mon temps libre je me suis formé en autodidacte
+                  au technologie Web.
                 </p>
               </div>
             </div>
@@ -393,15 +374,13 @@
           id="#skills"
           class="mx-32 my-5 text-left text-4xl font-bold text-[#93441A]"
         >
-        Compétences :
+          Compétences :
         </h2>
         <div class="w-20 h-0 mx-32 flex border border-[#B67332]"></div>
         <p class="text-black mx-32 mt-5 mb-7 text-left">
-          Je suis passionné par les technologies Web qui sont de plus en plus
-          présents dans nos vies, j'aime aider à développer des petites
-          activités en leur donnant un maximum de visibilité grace au site ou
-          'WebApp' que je programme, je m'efforce de vendre plus qu'un site
-          Web, mais plus un suivi personnalisé est quelque chose qui vous correspond.
+          Dans mon cursus les langages qui nous son enseigné sont souvent bas
+          niveaux : C, C++, ASM, et il nous arrive de faire un peu de python et
+          de Bash.
         </p>
         <div
           class="grid overflow-hidden grid-cols-2 auto-rows-auto gap-1 gap-x-7 grid-flow-row w-auto h-auto"
@@ -510,15 +489,13 @@
           </div>
         </div>
         <p class="text-black mx-32 mt-10 mb-5">
-          Je m'évertue à rester un maximum polyvalent et fort de proposition
-          pour tirer le meilleur de mes capacités. Je suis à l'aise avec les
-          technologie Web en générales, mes compétences sont beaucoup orientées
-          Développement web front-end, car c'est-ce que je pratique le plus mais
-          il m'est arrivé de faire du backend, En Node.js avec de nombreuse
-          outil, et avec gestion de base de données 'ProgessSQL' et 'Prisma', Néanmoins
-          merci pour votre lecture. Aussi dans le cadre de mes études j'ai pu
-          Apprendre plusieurs langages tels que le C, j'ai aussi eu la
-          chance de survoler des langages tel que le python et ASM.
+          J’ai découvert les technologies Web en autodidacte et durant mon stage
+          de 1ère année a Epitech, mes compétences sont beaucoup orientées
+          développement web frontend, car c'est-ce que je pratique le plus mais
+          il m'est arrivé de faire un peu de développement backend en Node.js.
+          Je possède aussi des connaissances basic sur les bases de données (SQL
+          et Prisma). J’ai aussi eu la chance de survoler des langages tel que
+          le python et ASM.
         </p>
         <br />
         <br />
@@ -533,14 +510,11 @@
         </h2>
         <div class="w-20 h-0 mx-32 flex border border-[#B67332]"></div>
         <p class="text-black mx-32 mt-5 text-left">
-          Si vous avez des question ou des recommencdantion je suis tout ouil,
+          Si vous avez des questions ou des recommandations je suis tout outil,
           vous pouvez me contacter via le formulaire si dessous ou encore sur
-          l'un de mes réseau ouvert telle que linkdin ou GitHub a bientot. 😺
+          l'un de mes réseaux ouverts telle que LinkedIn ou GitHub à bientôt. 😺
         </p>
         <br /><br />
-        <!-- <div>
-            line d'icone link
-          </div> -->
         <div
           class="grid overflow-hidden grid-cols-2 auto-rows-auto gap-1 gap-x-0 grid-flow-row w-auto h-auto"
         >
