--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       script.src = "https://s.abla.io/abla.js";
       document.getElementsByTagName("head")[0].appendChild(script);
     </script>
-    <title>🌸 Léo_p </title>
+    <title>🌸 Léo_p 🌸</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link
