--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         <p class="text-white mx-32 mt-5 mb-7 text-left">
           Salut, moi c'est Léop. J'étudie en tant qu'apprenti développeur chez
           Epitech ! Je suis un passionné d'informatique, j'adore découvrir de
-          nouvelles technologies et partir à l’aventure a la montagne 🏔️ 🏕️.
+          nouvelles technologies et partir à l’aventure à la montagne 🏔️ 🏕️.
         </p>
         <div
           class="grid overflow-hidden grid-cols-12 grid-rows-none gap-0 gap-x-2 grid-flow-row h-auto"
@@ -328,7 +328,7 @@
                   <a
                     class="hover:underline"
                     target="_blank"
-                    href="https://www.youtube.com/"
+                    href="https://www.malt.fr/profile/leomartin2"
                   >
                     Disponible
                     <svg
@@ -361,9 +361,9 @@
               <div class="box row-start-4 row-end-4 col-start-1 col-end-3">
                 <p>
                   Actuellement étudiant en école d'ingénieures (2ème année à
-                  Epitech), J’y est étudier les bases du développement (langage
-                  C et ASM). Et pendant mon temps libre je me suis formé en
-                  autodidacte au technologie Web.
+                  Epitech), J’y étudie les bases du développement (langage
+                  C, C++ et ASM). Et pendant mon temps libre je me suis formé en
+                  autodidacte aux technologies Web.
                 </p>
               </div>
             </div>
@@ -493,11 +493,11 @@
         </div>
         <p class="text-white mx-32 mt-10 mb-5">
           J’ai découvert les technologies Web en autodidacte et durant mon stage
-          de 1ère année a Epitech, mes compétences sont beaucoup orientées
+          de 1er année à Epitech, mes compétences sont beaucoup orientées
           développement web frontend, car c'est-ce que je pratique le plus mais
           il m'est arrivé de faire un peu de développement backend en Node.js.
           Je possède aussi des connaissances basic sur les bases de données (SQL
-          et Prisma). J’ai aussi eu la chance de survoler des langages tel que
+          et Prisma). J’ai aussi eu la chance de survoler des langages tels que
           le python et ASM.
         </p>
         <br />
@@ -509,13 +509,11 @@
           id="contact"
           class="mx-32 my-5 text-left text-4xl font-bold text-[#7f5af0]"
         >
-          Contactez moi !
+          Contactez-moi !
         </h2>
         <div class="w-20 h-0 mx-32 flex border border-[#7f5af0]"></div>
         <p class="text-white mx-32 mt-5 text-left">
-          Si vous avez des questions ou des recommandations je suis tout outil,
-          vous pouvez me contacter via le formulaire si dessous ou encore sur
-          l'un de mes réseaux ouverts telle que LinkedIn ou GitHub à bientôt. 😺
+          Si vous avez des questions ou des recommandations je suis tout ouïe, vous pouvez me contacter via le formulaire ci-dessous ou encore sur l'un de mes réseaux ouverts tels que Linkedin ou GitHub à bientôt. 😺
         </p>
         <br /><br />
         <div
