--- a/index.html
+++ b/index.html
@@ -360,10 +360,7 @@
               </div>
               <div class="box row-start-4 row-end-4 col-start-1 col-end-3">
                 <p>
-                  Actuellement étudiant en école d'ingénieures (2ème année à
-                  Epitech), J’y étudie les bases du développement (langage
-                  C, C++ et ASM). Et pendant mon temps libre je me suis formé en
-                  autodidacte aux technologies Web.
+                  Actuellement étudiant en école d'ingénieur (2ème année à Epitech), J’y étudie les bases du développement (langage C, C++ et ASM). Et pendant mon temps libre je me suis formé en autodidacte aux technologies Web.
                 </p>
               </div>
             </div>
@@ -492,13 +489,7 @@
           </div>
         </div>
         <p class="text-white mx-32 mt-10 mb-5">
-          J’ai découvert les technologies Web en autodidacte et durant mon stage
-          de 1er année à Epitech, mes compétences sont beaucoup orientées
-          développement web frontend, car c'est-ce que je pratique le plus mais
-          il m'est arrivé de faire un peu de développement backend en Node.js.
-          Je possède aussi des connaissances basic sur les bases de données (SQL
-          et Prisma). J’ai aussi eu la chance de survoler des langages tels que
-          le python et ASM.
+          J’ai découvert les technologies Web en autodidacte et durant mon stage de 1er année à Epitech, mes compétences se sont beaucoup orientées développement web frontend, car c'est-ce que je pratique le plus mais il m'est arrivé de faire un peu de développement backend en Node.js. Je possède aussi des connaissances basic sur les bases de données (SQL et Prisma). J’ai aussi eu la chance de survoler des langages tels que le python et ASM.
         </p>
         <br />
         <br />
