--- a/index.html
+++ b/index.html
@@ -1,13 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
   <head>
-    <script>
-      var script = document.createElement("script");
-      script.dataset.cache = true;
-      script.dataset.websiteId = "7c7836ea-cee1-45b7-b701-be0213efd5a2";
-      script.src = "https://s.abla.io/abla.js";
-      document.getElementsByTagName("head")[0].appendChild(script);
-    </script>
     <title>Léo_p</title>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -122,7 +115,7 @@
           ></a>
         </div>
         <div class="item w-auto h-auto ml-auto mr-auto">
-          <a href="mailto:info.freelance@leop.me?subject=Email du site de Léop">
+          <a href="mailto:leop.freelance@gmail.com?subject=Email du site de Léop">
             <svg
               class="hover:stroke-[#2cb67d] p-1 m-0"
               width="30"
@@ -143,101 +136,43 @@
 
       <div class="mt-16">
         <div class="flex-inline">
-          <div class="item w-full h-auto">
-            <a
-              class="my-2.5 inline-flex font-medium text-lg hover:text-[#2cb67d]"
-              href="#home"
-            >
-              <svg
-                class="hover:stroke-[#2cb67d] mx-6"
-                width="25"
-                height="25"
-                fill="none"
-                stroke="#fff"
-                stroke-linecap="round"
-                fff
-                stroke-linejoin="round"
-                stroke-width="2"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M3 10.25V20a1 1 0 0 0 1 1h4.429a1 1 0 0 0 1-1v-6.714h5.142V20a1 1 0 0 0 1 1H20a1 1 0 0 0 1-1v-9.75a1 1 0 0 0-.4-.8L12 3 3.4 9.45a1 1 0 0 0-.4.8Z"
-                ></path>
+          <div class="item w-full h-auto group hover:text-[#2cb67d]">
+            <a class="my-2.5 inline-flex font-medium text-lg group-hover:text-[#2cb67d]" href="#home">
+              <svg class="group-hover:stroke-[#2cb67d] mx-6" width="25" height="25" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M3 10.25V20a1 1 0 0 0 1 1h4.429a1 1 0 0 0 1-1v-6.714h5.142V20a1 1 0 0 0 1 1H20a1 1 0 0 0 1-1v-9.75a1 1 0 0 0-.4-.8L12 3 3.4 9.45a1 1 0 0 0-.4.8Z"></path>
               </svg>
-              Accueil</a
-            >
+              Accueil
+            </a>
           </div>
-          <div class="item w-full h-auto">
-            <a
-              class="my-2.5 inline-flex font-medium text-lg hover:text-[#2cb67d]"
-              href="#about"
-            >
-              <svg
-                class="hover:stroke-[#2cb67d] mx-6"
-                width="25"
-                height="25"
-                fill="none"
-                stroke="#fff"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
-              >
+          <div class="item w-full h-auto group hover:text-[#2cb67d]">
+            <a class="my-2.5 inline-flex font-medium text-lg group-hover:text-[#2cb67d]" href="#about">
+              <svg class="group-hover:stroke-[#2cb67d] mx-6" width="25" height="25" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
                 <path d="M12 3a4 4 0 1 0 0 8 4 4 0 1 0 0-8z"></path>
                 <path d="M4 21v-4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v4"></path>
               </svg>
-              Présentation</a
-            >
+              Présentation
+            </a>
           </div>
-          <div class="item w-full h-auto">
-            <a
-              class="my-2.5 inline-flex font-medium text-lg hover:text-[#2cb67d]"
-              href="#skills"
-            >
-              <svg
-                class="hover:fill-[#2cb67d] mx-6"
-                width="25"
-                height="25"
-                fill="#fff"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M20 22H4a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1Zm-1-2V4H5v16h14ZM7 6h4v4H7V6Zm0 6h10v2H7v-2Zm0 4h10v2H7v-2Zm6-9h4v2h-4V7Z"
-                ></path>
+          <div class="item w-full h-auto group hover:text-[#2cb67d]">
+            <a class="my-2.5 inline-flex font-medium text-lg group-hover:text-[#2cb67d]" href="#skills">
+              <svg class="group-hover:fill-[#2cb67d] mx-6" width="25" height="25" fill="#fff" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M20 22H4a1 1 0 0 1-1-1V3a1 1 0 0 1 1-1h16a1 1 0 0 1 1 1v18a1 1 0 0 1-1 1Zm-1-2V4H5v16h14ZM7 6h4v4H7V6Zm0 6h10v2H7v-2Zm0 4h10v2H7v-2Zm6-9h4v2h-4V7Z"></path>
               </svg>
               Compétences
             </a>
           </div>
-
-          <div
-            class="camp item w-full h-auto hover:text-[#2cb67d] hover:stroke-[#2cb67d]"
-          >
-            <a
-              class="my-2.5 inline-flex font-medium text-lg hover:text-[#2cb67d]"
-              href="#contact"
-            >
-              <svg
-                class="hover:stroke-[#2cb67d] mx-6"
-                width="25"
-                height="25"
-                fill="none"
-                stroke="#fff"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-                stroke-width="2"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <rect width="18" height="14" x="3" y="5" rx="1"></rect>
-                <path d="M20 5.5 12 13 4 5.5"></path>
-              </svg>
-              Contact</a
-            >
-          </div>
         </div>
+
+        <div class="camp item w-full h-auto group hover:text-[#2cb67d] hover:stroke-[#2cb67d]">
+          <a class="my-2.5 inline-flex font-medium text-lg group-hover:text-[#2cb67d] group-hover:stroke-[#2cb67d]" href="#contact">
+            <svg class="group-hover:stroke-[#2cb67d] mx-6" width="25" height="25" fill="none" stroke="#fff" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+              <rect width="18" height="14" x="3" y="5" rx="1"></rect>
+              <path d="M20 5.5 12 13 4 5.5"></path>
+            </svg>
+            Contact
+          </a>
+        </div>
+          
       </div>
     </div>
     <div
@@ -258,7 +193,7 @@
               Développeur 🛠️ && étudiant 🍺
             </p>
           </div>
-          <a class="inline-flex ml-[50%] mr-[50%] mt-[40%]"" href="#about">
+          <a class="inline-flex ml-[50%] mr-[50%] sm:mt-[200px] xl:mt-[40%]" href="#about">
             <div class="arrow text-center"></div>
           </a>
         </div>
@@ -299,7 +234,7 @@
               <div class="box row-start-1 col-start-1 col-end-1 mt-3">
                 <p>
                   <span class="font-blod text-2xl text-[#2cb67d]">></span>
-                  <strong>Âge : </strong> 20 ans 🎂 (2002)
+                  <strong>Âge : </strong> <span id="age">1</span> ans 🎂
                 </p>
               </div>
               <div class="box row-start-1 col-start-2 col-end-3 mt-3">
@@ -312,7 +247,7 @@
               <div class="box row-start-2 col-start-1 col-end-1 mt-3">
                 <p>
                   <span class="font-blod text-2xl text-[#2cb67d]">></span>
-                  <strong>Email : </strong> info.freelance@leop.me
+                  <strong>Email : </strong> leop.freelance@gmail.com
                 </p>
               </div>
               <div class="box row-start-2 col-start-2 col-end-3 mt-3">
@@ -817,7 +752,7 @@
               ></a>
             </div>
             <div class="item w-auto h-auto ml-auto mr-auto">
-              <a href="mailto:info.freelance@leop.me">
+              <a href="mailto:leop.freelance@gmail.com">
                 <svg
                   class="hover:stroke-[#7f5af0] p-1 m-0"
                   width="30"
@@ -843,6 +778,15 @@
           All Rights Reserved, but it's okay 🦊
         </span>
       </footer>
+      <script>
+        var varAge = document.getElementById("age");
+        var dob = new Date("09/13/2002");  
+        var month_diff = Date.now() - dob.getTime();  
+        var age_dt = new Date(month_diff);   
+        var year = age_dt.getUTCFullYear();  
+        var age = Math.abs(year - 1970);
+        varAge.textContent = age;
+      </script>
       <script src="./app.js"></script>
     </div>
   </div>
