--- a/index.html
+++ b/index.html
@@ -620,7 +620,7 @@
               Envoyer moi un Email
             </h3>
             <br /><br />
-            <form  action="form.php">
+            <form action="form.php" method="POST">
               <input
                 class="bg-[#16161a] border border-[#7f5af0] placeholder:text-[#7f5af0] focus:border-[#7f5af0] focus:outline-none focus:ring-1 focus:ring-[#7f5af0] p-1 w-3/5 rounded my-3"
                 type="email"
